--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Test
         run: dotnet test --no-build --verbosity normal
       - name: Push to NuGet
-        run: dotnet nuget push **/When.*nupkg --source ${{ secrets.NUGET_FEED }} --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
+        run: dotnet nuget push **/When*nupkg --source ${{ secrets.NUGET_FEED }} --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
